--- a/u-center/pom.xml
+++ b/u-center/pom.xml
@@ -92,6 +92,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
