--- a/u-center/src/main/resources/application.yml
+++ b/u-center/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
     url: jdbc:mysql://localhost:3306/mybatis_plus_demo?characterEncoding=utf-8&useSSL=false&useUnicode=true
     username: root
     password: 123456
+  redis:
+    database: 2 #我的0号库使用在其他项目上，我用2号库
+    host: 152.136.183.34
+    port: 6379
+    password: 123456
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 输出Sql语句执行日志
