--- a/u-center/src/main/resources/application.yml
+++ b/u-center/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: u-center
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/mybatis_plus_demo?characterEncoding=utf-8&useSSL=false&useUnicode=true
+    url: jdbc:mysql://localhost:3306/mo_yu_ucenter?characterEncoding=utf-8&useSSL=false&useUnicode=true
     username: root
     password: 123456
   redis:
