--- a/u-center/pom.xml
+++ b/u-center/pom.xml
@@ -106,6 +106,11 @@
             <version>1.6.2</version>
         </dependency>
 
+        <!-- security-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
